added tic-tac-toe page 	modified:   css/style.css	modified:   library.html 	modified:   scripts/loops.j

--- a/library.html
+++ b/library.html
@@ -38,6 +38,20 @@
           Перейти
         </button>
       </div>
+      <div class="map-1">
+        <img
+          src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/32/Tic_tac_toe.svg/1200px-Tic_tac_toe.svg.png"
+          alt=""
+        />
+        <p>
+          Крестики-нолики
+        </p>
+        <button
+          onclick="location.href='tictactoe.html'"
+        >
+          Перейти
+        </button>
+      </div>
     </main>
   </body>
 </html>
