--- a/tictactoe.html
+++ b/tictactoe.html
@@ -14,6 +14,10 @@
     <link rel="stylesheet" href="css/tictactoe.css" />
     <link rel="stylesheet" href="css/overlay.css" />
     <link rel="stylesheet" href="css/configuration.css" />
+    <link rel="stylesheet" href="css/game.css" />
+    <script src="scripts/config.js" defer></script>
+    <script src="scripts/game.js" defer></script>
+    <script src="scripts/popa.js" defer></script>
   </head>
   <body>
     <div id="backdrop"></div>
@@ -27,10 +31,10 @@
         <form>
           <div class="form-control">
             <label for="playername">Player name</label>
-            <input type="text" name="playername" id="playername" />
+            <input type="text" name="playername" id="playername" required/>
           </div>
           <div>
-            <button type="button" class="btn btn-alt">Cancel</button>
+            <button type="reset" class="btn btn-alt" id="cancel-config-btn">Cancel</button>
             <button type="submit" class="btn">Confirm</button>
           </div>
         </form>
@@ -38,33 +42,33 @@
       <section id="game-configuration">
         <ol>
           <li>
-            <article>
+            <article id="player-1-data">
               <h2>Игрок №1</h2>
               <h3>Имя игрока</h3>
               <p class="player-symbol">X</p>
-              <button class="btn btn-alt">ИЗМЕНИТЬ</button>
+              <button class="btn btn-alt" id="edit-player-1-btn" data-playerid=1>ИЗМЕНИТЬ</button>
             </article>
           </li>
           <li>
-            <article>
+            <article id="player-2-data">
               <h2>Игрок №2</h2>
               <h3>Имя игрока</h3>
               <p class="player-symbol">O</p>
-              <button class="btn btn-alt">ИЗМЕНИТЬ</button>
+              <button class="btn btn-alt" id="edit-player-2-btn" data-playerid=2>ИЗМЕНИТЬ</button>
             </article>
           </li>
         </ol>
-        <button class="btn">Начать новую игру</button>
+        <button class="btn" id="start-game-btn">Начать новую игру</button>
       </section>
 
       <section id="active-game">
-        <article>
-          <h3>You won!, <span id="winner-player-name"></span></h3>
-          <p>Нажмите "Начать новую игру" чтобы начать игру!</p>
+        <article id="game-over">
+          <h3>You won!, ABOBA <span id="winner-player-name"></span></h3>
+          <p>Нажмите "Начать новую игру" чтобы начать новую игру!</p>
         </article>
 
         <p>Ваш ход <span id="active-player-name">PLAYER NAME</span>!</p>
-        <ol>
+        <ol id="game-board">
           <li></li>
           <li></li>
           <li></li>
